add cf analytics

--- a/index.html
+++ b/index.html
@@ -507,5 +507,6 @@
 			<button id="closeintro" class="hover-shadow">Let's Get Started!</button>
 		</div>
 		<script src="./index.js"></script>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02f7474fc3c54dc5ab042af9c584a0cf"}'></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
